--- a/css/m4iot21.css
+++ b/css/m4iot21.css
@@ -124,7 +124,7 @@ li {
 }
 
 a {
-  color: #0f4568;
+  color: #8b0000;
 }
 
 iframe,
@@ -164,7 +164,7 @@ nav ul li a {
 }
 
 .logo {
-  background: url("../img/background20.png") repeat-x left top;
+  background: url("../img/background21.png") repeat-x left top;
   background-size: auto 100%;
   padding: 0;
   margin: auto;
